<resources>
    <string name="app_name">Social Rehab</string>

    <!--for support lib-->
    <string name="okay">Okay</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="accessibility_summary">This App\'s Uses Accessibility Services</string>
    <string name="accessibility_desc">"Switch ‘ON’ in the top right corner to save your precious time. Social Rehab will keep noting your usage of social apps :

 - Facebook
 - Whats App
 - Instagram

Note:
We are not capturing any content of apps as we are bound by our privacy policy. This permission is only to capture over all usage."</string>

    <string name="main">Usage Stats</string>
    <string name="action_settings">Settings</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="viber">Viber</string>
    <string name="kik">Kik</string>
    <string name="snapchat">SnapChat</string>
    <string name="active">Activate</string>
    <string name="summary_active">Restrict app when enabled</string>
    <string name="start_time">Set Start Time</string>
    <string name="end_time">Set End Time</string>
    <!---->


    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Click on individual apps for respective setting</string>
    <string name="app_version">1.3</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="url_faq"></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy"></string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="summary_drive_mode">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="in_hours_hor">I\nn\n\n\nM\ni\nn\nu\nt\ne\ns</string>
    <string name="permission_user_stat">Get Your usage History</string>
    <string name="permission_user_stat_summary">View your last four days of social app usage. Will help to see how you kill your time.</string>
    <string name="app_click_summary">Enable and set timing</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="got_it">Got It</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password? \nDon\'t Worry. Click here to change it</string>
    <string name="security">Security</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recovery_email_id">Recovery Email Id</string>
    <string name="enter_password_of">Enter Password of Four Digit Only</string>
    <string name="err_valid_password">Please enter valid password</string>
    <string name="err_password_not_matched">Password is not matched</string>
    <string name="err_valid_email_id">Please enter valid email id</string>
    <string name="summary_password"></string>
    <string name="feedback_submitted_message">Dear Guest. Thank you for your feedback.</string>
    <string name="password_changed">Password Changed</string>
    <string name="loading">Loading...</string>
    <string name="err_network">Network Error</string>
    <string name="accessibility_setting_page_label">🚫 Social Rehab 🚫</string>


    <!--arrays-->
    <string-array name="apps">
        <item>@string/whatsapp</item>
        <item>@string/facebook</item>
        <item>@string/instagram</item>
        <item>@string/twitter</item>
        <item>@string/youtube</item>
    </string-array>
</resources>
