<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/ten_dp">

    <EditText
        android:id="@+id/pd"
        style="@style/DarkTextAppearanceSmall"
        android:layout_width="match_parent"
        android:lines="1"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/edittext_drawable"
        android:hint="@string/enter_password_of"
        android:padding="@dimen/ten_dp" />

    <EditText
        android:id="@+id/c_pd"
        style="@style/DarkTextAppearanceSmall"
        android:layout_width="match_parent"
        android:lines="1"
        android:maxLength="4"
        android:inputType="numberPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/edittext_drawable"
        android:hint="@string/confirm_password"
        android:padding="@dimen/ten_dp" />

    <EditText
        android:id="@+id/r_eid"
        style="@style/DarkTextAppearanceSmall"
        android:layout_width="match_parent"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/edittext_drawable"
        android:hint="@string/recovery_email_id"
        android:padding="@dimen/ten_dp" />

    <Button
        android:id="@+id/change_password"
        style="@style/LightTextAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/button_selector"
        android:enabled="true"
        android:text="@string/change_password" />

</LinearLayout>