<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".android.module.main.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five_dp"
        android:background="@drawable/edittext_drawable"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/apps"
            android:background="@drawable/dropdown_drawable"/>


    </LinearLayout>

    <View
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_dp"
        android:layout_below="@+id/header"
        android:layout_marginBottom="@dimen/two_dp"
        android:layout_marginTop="@dimen/two_dp" />

    <TextView
        android:id="@+id/hours"
        style="@style/DarkTextAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:paddingLeft="@dimen/two_dp"
        android:text="@string/in_hours_hor"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:visibility="visible" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/accessibility_setting"
        android:layout_below="@+id/header_view"
        android:layout_toRightOf="@+id/hours" />

    <ToggleButton
        android:id="@+id/accessibility_setting"
        style="@style/LightTextAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/toggle_button_selector"
        android:checked="false"
        android:textOff="Enable Control Usage"
        android:textOn="Control Usage Enabled" />

    <LinearLayout
        android:id="@+id/lin_permission_user_stat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ee000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/permission_user_stat"
            style="@style/DarkTextAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_stroke_corner"
            android:clickable="true"
            android:padding="@dimen/ten_dp"
            android:text="@string/permission_user_stat" />

        <TextView
            style="@style/LightTextAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/permission_user_stat_summary" />

    </LinearLayout>

</RelativeLayout>